# scaf

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: bundle.yml  r.yml  release.yml
docs/: index.html  tsconfig.app.tsbuildinfo
docs/src/components/: Installation.tsx  Usage.tsx
docs/src/components/ui/: multi-select.tsx
src/: cmd.rs  error.rs  logger.rs  main.rs  master.rs  options.rs
