[package]
name = "scaf"
description = "Scaffold any new project with all the prerequsits"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive", "env", "wrap_help", "cargo"] }
colored = "2.1.0"
thiserror = "1.0.64"
tracing = { version = "0.1.40" }
tracing-durations-export = { version = "0.3.0", features = ["plot"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "registry"] }
